--- a/.github/workflows/grs.yml
+++ b/.github/workflows/grs.yml
@@ -2,7 +2,7 @@ name: Update README cards
 
 on:
   schedule:
-    - cron: "15 1 * * *" # Runs once daily at midnight
+    - cron: "15 1 * * *"
   workflow_dispatch:
 
 jobs:
